--- a/TutorCenter.Administrator/appsettings.json
+++ b/TutorCenter.Administrator/appsettings.json
@@ -5,5 +5,29 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB; Database=SE347_DB; Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secrect": "SE347-super-secret-key",
+    "ExpiryMinutes": "480",
+    "Issuer": "SE347-Developer",
+    "Audience": "SE347-Developer"
+  },
+  "CloudinarySettings": {
+    "CloudName": "dhehywasc",
+    "ApiSecret": "rLK0_3DfGSRNmBh91DWEacZO9AE",
+    "ApiKey": "257198759123975"
+  },
+  "EmailSettingNames": {
+    "Email": "center.edusmart@gmail.com",
+    "Password": "ynrmnyirlrwetwcg",
+    "TimeSpan": "24",
+    "SmtpClient": "smtp.gmail.com",
+    "Port": "587",
+    "EnableSsl": "true",
+    "UseDefaultCredentials": "false"
+  }
 }
