--- a/TutorCenter.DBMigrator/TutorCenter.DBMigrator.csproj
+++ b/TutorCenter.DBMigrator/TutorCenter.DBMigrator.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TutorCenter.Application\TutorCenter.Application.csproj" />
     <ProjectReference Include="..\TutorCenter.Infrastructure\TutorCenter.Infrastructure.csproj" />
   </ItemGroup>
 
