--- a/TutorCenter.Application/TutorCenter.Application.csproj
+++ b/TutorCenter.Application/TutorCenter.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.22.0" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
@@ -25,13 +26,9 @@
     <Folder Include="Services\Courses\Tutor\Queries\GetAllRequestGettingClassOfTutor\" />
     <Folder Include="Services\Courses\Tutor\Queries\GetTeachingClassDetailQuery\" />
     <Folder Include="Services\SubscribeRegistration\Commands\" />
-    <Folder Include="Services\Users\Admin\Commands\" />
-    <Folder Include="Services\Users\Commands\" />
     <Folder Include="Services\Users\Queries\CustomerQueries\" />
     <Folder Include="Services\Users\Queries\GetTutorProfile\" />
     <Folder Include="Services\Users\Queries\Handlers\" />
-    <Folder Include="Services\Users\Tutor\ChangeInfo\" />
-    <Folder Include="Services\Users\Tutor\Registers\" />
   </ItemGroup>
 
   <ItemGroup>
