--- a/TutorCenter.Application/TutorCenter.Application.csproj
+++ b/TutorCenter.Application/TutorCenter.Application.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.0"/>
         <PackageReference Include="MediatR" Version="12.1.1"/>
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
     </ItemGroup>
 
